--- a/MyApp006MoreActivities_SK/app/src/main/res/layout/thirdactivity.xml
+++ b/MyApp006MoreActivities_SK/app/src/main/res/layout/thirdactivity.xml
@@ -1,24 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ThirdActivity">
+    android:layout_height="match_parent">
 
-    <!-- TopAppBar -->
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
-    <TextView
-        android:id="@+id/textViewSummary"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Souhrn úkolu"
-        android:textSize="18sp" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="?attr/actionBarSize">
+
+        <TextView
+            android:id="@+id/tvTaskSummary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Souhrn úkolu"
+            android:textSize="25dp"
+            android:textStyle="italic" />
+
+    </LinearLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
